# LLVM

./: .gitignore  README.md
basicblock_counter/: CMakeLists.txt
basicblock_counter/basicblock/: CMakeLists.txt  CMakeLists.txt~  basicblock.cpp  bblock_pass.cpp  func_pass.cpp
basicblock_counter/test_cases/: bbpass.cpp  input.bc  input.c
connected_components/: CMakeLists.txt
connected_components/conn_comp/: CMakeLists.txt  callGraphPass.cpp  conn_comp.cpp  scc_iter.cpp
connected_components/test_cases/: input.bc  input.c  run.sh  run.sh~
dyn_profiling/: CMakeLists.txt
dyn_profiling/dyn_pro/: CMakeLists.txt  dyn_pro.cpp  dyn_pro1.cpp
dyn_profiling/test_cases/: dyn_pro.sh  input.c  rtlib.c  rtlib1.c  run.sh
function_finder/skeleton/: CMakeLists.txt~  Skeleton.cpp
global_var/: CMakeLists.txt
global_var/g_var/: CMakeLists.txt  g_var.cpp
global_var/test_cases/: input.c  run.sh  run.sh~
hot_fields/: CMakeLists.txt
hot_fields/hotField/: CMakeLists.txt  blockProfiler.cpp  functionProfiler.cpp  hot_field.cpp  safe.cpp
hot_fields/test_cases/: input.bc  input.c  input.c~  input.ll  q_sort.ll  qsort.c  run.sh  run.sh~  tc1.bc  tc1.c  temp.c
